--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,11 @@
 name: S3ssoCraft
 version: '${project.version}'
 main: me.gurwi.s3ssocraft.S3ssoCraft
+commands:
+  sessocraft:
+    description: Main Command
+    aliases:
+      - sex
+      - sexcraft
+      - anal
+      - analcraft
